add multiplayer,minor fixes